# azure-env-vars-converter

./: .gitignore  README.md  azure-env-vars-converter.cabal
src/: Main.hs
